Docs: actualizar README con descarga desde GitHub Releases